<resources>
    <string name="app_name">A3 - CookieFinder</string>
    <string name="play">Play</string>
    <string name="game_over">You found all the Goose!</string>
    <string name="board_sizes">Board Sizes</string>
    <string name="number_of_cookies">Max Score</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="goose_finder">Goose Finder</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="skip">Skip</string>
    <string name="by_mql_sfu_ca">By mql@sfu.ca</string>
    <string name="goose_finder_Intro">Goose Finder</string>
    <string name="score">Score:</string>
    <string name="high_score">High Score</string>
    <string name="_1_score_in_1_turns">1 Score in 1 turns</string>
    <string name="turns">Turns:</string>
    <string name="statistic">Statistic</string>
    <string name="configuration">Configuration</string>
    <string name="config">Config</string>
    <string name="number_of_games">Number of Games</string>
    <string name="best_turn">Best Turn</string>
    <string name="reset">Reset</string>
    <string name="geese">geese.</string>
    <string name="instructions">  Inspired by the Untitled Goose Game\n
        Start playing by pressing play.\n
        Pick a button and see if the goose is behind there.\n
        The number is a hint on how many geese are on that row and column of the button.\n
        You may click on the goose to get the hint.\n
        How fast can you find all the goose?</string>
    <string name="size">Size</string>
    <string name="loading">Loading...</string>
    <string name="by_alex_le">By Alex Le</string>
</resources>
