<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/goose_screenshot_11"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/transport_medium"
        android:padding="20dp"
        android:text="@string/options"
        android:textColor="@color/utg_white_text"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textBoardSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/transport_medium"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/number_of_cookies"
                android:textColor="@color/utg_white_text" />

            <RadioGroup
                android:id="@+id/radioGroupCookiesNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="0dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/transport_medium"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/board_sizes"
                android:textColor="@color/utg_white_text" />

            <RadioGroup
                android:id="@+id/radioGroupBoardSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/transport_medium"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:textColor="@color/utg_white_text" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/transport_medium"
            android:text="@string/statistic"
            android:textAlignment="center"
            android:textColor="@color/utg_white_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/transport_medium"
                android:text="@string/configuration"
                android:textColor="@color/utg_white_text" />

            <TextView
                android:id="@+id/textViewConfigStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/transport_medium"
                android:paddingLeft="15dp"
                android:text="@string/config"
                android:textAlignment="textEnd"
                android:textColor="@color/utg_white_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/transport_medium"
                android:gravity="bottom"
                android:text="@string/number_of_games"
                android:textColor="@color/utg_white_text" />

            <TextView
                android:id="@+id/textViewStatNumGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/transport_medium"
                android:paddingLeft="15dp"
                android:text=" N/A"
                android:textColor="@color/utg_white_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/transport_medium"
                android:text="@string/best_turn"
                android:textColor="@color/utg_white_text" />

            <TextView
                android:id="@+id/textViewStatBestTurn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/transport_medium"
                android:paddingLeft="15dp"
                android:text="N/A"
                android:textAlignment="viewEnd"
                android:textColor="@color/utg_white_text" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:backgroundTint="#bdbdbd"
            android:fontFamily="@font/transport_medium"
            android:text="@string/reset"
            android:textColor="@color/utg_white_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>