<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/utg_splash_reversed"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="11dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/textView_mainActTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/transport_medium"
            android:text="@string/goose_finder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/utg_white_text"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/transport_medium"
            android:text="By mql at sfu.ca"
            android:textColor="@color/utg_white_text"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#bdbdbd"
            android:fontFamily="@font/transport_medium"
            android:text="@string/play"
            android:textColor="@color/utg_white_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnOptions"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#bdbdbd"
            android:fontFamily="@font/transport_medium"
            android:text="@string/options"
            android:textColor="@color/utg_white_text" />

        <Button
            android:id="@+id/btnAbout"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#bdbdbd"
            android:fontFamily="@font/transport_medium"
            android:text="@string/about"
            android:textColor="@color/utg_white_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>